Fix spacing

--- a/src/styles/components/side-list.less
+++ b/src/styles/components/side-list.less
@@ -5,7 +5,6 @@
 
   .side-list-item {
     padding-bottom: @base-spacing-unit / 4;
-    padding-top: @base-spacing-unit / 4;
   }
 }
 
